--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
     <start-class>poc.tehemton2.App</start-class>
   </properties>
 
