--- a/pom.xml
+++ b/pom.xml
@@ -33,19 +33,22 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.4.6</version>
+      <version>1.4.6</version><!-- Not working -->
+      <!--<version>1.2.11</version>--><!-- Working -->
     </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>2.0.7</version>
+      <version>2.0.7</version><!-- Not working -->
+      <!--<version>1.7.36</version>--><!-- Working -->
     </dependency>
 
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.2</version>
+      <version>1.2</version><!-- Not working -->
+      <!--<version>1.1.1</version>--><!-- Working -->
     </dependency>
 
     <dependency>
